Added calculations for air mass

--- a/SolarAnglesNet/SolarAngles.Test/SolarAngles.Test.csproj
+++ b/SolarAnglesNet/SolarAngles.Test/SolarAngles.Test.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Converter\Converter.csproj" />
     <ProjectReference Include="..\SolarAngles\SolarAngles.csproj" />
   </ItemGroup>
 
