Changed air mass model to Kasten and Young (better for high zenith angles and also considers altitude).

--- a/SolarAnglesNet/SolarAngles/SolarAngles.csproj
+++ b/SolarAnglesNet/SolarAngles/SolarAngles.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="TimeZoneConverter" Version="3.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Converter\Converter.csproj" />
+  </ItemGroup>
+
 </Project>
