--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: SolarAnglesNet
 
 on:
   push:
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore SolarAnglesNet/SolarAnglesNet.sln
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build SolarAnglesNet/SolarAnglesNet.sln --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test SolarAnglesNet/SolarAnglesNet.sln --no-restore --verbosity normal
