--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet test SolarAnglesNet/SolarAnglesNet.sln --no-restore --verbosity normal
 
   analyze:
-    name: Build
+    name: SonarCloudAnalysis
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
